# axiometica-air

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-ENTERPRISE  NOTICE  README.md  SECURITY.md  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  gcp-fresh-install.sh  install-prod.sh  install.bat  install.ps1  install.sh  start-all-services.ps1  start-all-services.sh
backend/: .env.example  Dockerfile  Dockerfile.watcher  alembic.ini  apply_migrations.py  backfill_enumeration.py  encrypt_existing_secrets.py  migrate_directly.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_migration.py  seed_cmdb.py  seed_new_actions.py  seed_windows_actions.py  setup_oob.py  simulate_storm_external.py  test_cmdb.py  test_governance_e2e.py  watcher_main.py
backend/migrations/: env.py
backend/scripts/: neo4j_seed.cypher
backend/seeds/: add_cloud_variants.sql  all_runbook_tools.sql  common_runbooks.sql  fix_db_command_variant.sql  fix_enabled_runbooks.sql  populate_command_variants.sql  runbooks.sql
backend/tests/: conftest.py  test_admin_stuck_incidents.py  test_api_routes.py  test_approvals.py  test_auth.py  test_change_workflow_integration.py  test_cmdb_neo4j_serialization.py  test_context_schema.py  test_crypto.py  test_enumeration_service.py  test_event_qualification_reload.py  test_governance.py  test_incident_regression.py  test_incident_workflow_integration.py  test_metrics.py  test_monitoring_checks.py  test_monitoring_events.py  test_notification_teams_api.py  (+11 more)
(+399 files in other folders)
